Update resume content in index.html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -78,22 +78,25 @@
   <section id="skills">
     <h2>Technical Skills</h2>
     <ul>
-      <li>Languages: Python, C/C++, HTML/CSS</li>
-      <li>Developer Tools: VS Code, Visual Studio, PyCharm</li>
+      <li>Languages: Python, C/C++, HTML/CSS, JavaScript, R</li>
+      <li>Developer Tools: VS Code, Visual Studio, PyCharm, R Studio</li>
+      <li>Cloud Computing: AWS- S3, Lambda, API Gateway, CloudFront, DynamoDB, IAM, Route53, ACM, EC2, CloudFormation</li>
+      <li>CI/CD: GitHub Actions</li>
+      <li>Containerization: Kubernetes</li>
+      <li>Infrastructure as Code: Terraform</li>
+      <li>Operating Systems: Linux</li>
+      <li>Microsoft Office: Excel, Outlook, Word, PowerPoint, Teams </li>
     </ul>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
     <div class="project">
-       <h3>AWS Cloud-Hosted Resume</h3>
+       <h3>Cloud-Hosted Resume | AWS (S3, CloudFront, Lambda, API Gateway, DynamoDB), Terraform, GitHub Actions, Python, HTML/CSS </h3>
        <ul>
-        <li>Built a personal resume website from scratch using HTML and CSS for structured content and styling.</li>
-        <li>Deployed and hosted the static website using Amazon S3 with bucket configuration for public access.</li>
-        <li>Configured Amazon Route 53 for domain registration and DNS setup, enabling access via uchennaokoronkwo.com and www.uchennaokoronkwo.com</li>
-        <li>Used Amazon Certificate Manager to validate the domain and obtain an SSL/TLS certificate.</li>
-        <li>Implemented Amazon CloudFront for HTTPS support and content distribution, enhancing performance and security for user experience.</li>
-        <li>Updated Amazon Route 53 DNS records to point the domain to the CloudFront distribution, ensuring global accessibility.</li>
+        <li>Deployed a static HTML/CSS resume site to S3 with custom domain and HTTPS via AWS Route 53 and AWS CloudFront</li>
+        <li>Created a serverless visitor counter using Lambda (Python), API Gateway, and DynamoDB</li>
+        <li>Implemented CI/CD pipelines with Terraform and GitHub Actions for infrastructure and deployment automation</li>
       </ul>
       <h3>Stem Craft 2.0 in C/C++</h3>
       <ul>
