--- a/HTML/index.html
+++ b/HTML/index.html
@@ -78,14 +78,14 @@
   <section id="skills">
     <h2>Technical Skills</h2>
     <ul>
-      <li>Languages: Python, C/C++, HTML/CSS, JavaScript, R</li>
-      <li>Developer Tools: VS Code, Visual Studio, PyCharm, R Studio</li>
-      <li>Cloud Computing: AWS- S3, Lambda, API Gateway, CloudFront, DynamoDB, IAM, Route53, ACM, EC2, CloudFormation</li>
-      <li>CI/CD: GitHub Actions</li>
-      <li>Containerization: Kubernetes</li>
-      <li>Infrastructure as Code: Terraform</li>
-      <li>Operating Systems: Linux</li>
-      <li>Microsoft Office: Excel, Outlook, Word, PowerPoint, Teams </li>
+      <li><strong>Languages:</strong> Python, C/C++, HTML/CSS, JavaScript, R</li>
+      <li><strong>Developer Tools:</strong> VS Code, Visual Studio, PyCharm, R Studio</li>
+      <li><strong>Cloud Computing:</strong> AWS- S3, Lambda, API Gateway, CloudFront, DynamoDB, IAM, Route53, ACM, EC2, CloudFormation</li>
+      <li><strong>CI/CD:</strong> GitHub Actions</li>
+      <li><strong>Containerization:</strong> Kubernetes</li>
+      <li><strong>Infrastructure as Code:</strong> Terraform</li>
+      <li><strong>Operating Systems:</strong> Linux</li>
+      <li><strong>Microsoft Office:</strong> Excel, Outlook, Word, PowerPoint, Teams </li>
     </ul>
   </section>
 
