Update 'Other Involvement' content in index.html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -69,10 +69,15 @@
   <section id="involvement">
     <h2>Other Involvement</h2>
     <div class="education-item">
-        <h3>National Society of Black Engineers (NSBE)</h3>
-        <p><em>- University of Houston (NSBE)</em></p>
-        <p>Active member participating in volunteering events, workshops, and networking events, etc.</p>
-      </div>
+      <h3><strong>National Society of Black Engineers (NSBE)</strong> <em>– University of Houston</em></h3>
+      <p>Active member participating in volunteering events, workshops, and networking events, etc.</p>
+    </div>
+
+    <div class="education-item">
+      <h3><strong>Black Male Engineering Network (BMEN)</strong> <em>– University of Houston</em></h3>
+      <p>Active member engaged in community building, mentorship, and engineering initiatives.</p>
+    </div>
+  
   </section>
 
   <section id="skills">
@@ -98,7 +103,7 @@
         <li>Created a serverless visitor counter using Lambda (Python), API Gateway, and DynamoDB</li>
         <li>Implemented CI/CD pipelines with Terraform and GitHub Actions for infrastructure and deployment automation</li>
       </ul>
-      <h3>Stem Craft 2.0 in C/C++</h3>
+      <h3>Stem Craft 2.0 | C/C++</h3>
       <ul>
         <li>Worked in a team of 4 to build an LED electric circuit with switches, resistors, and a buzzer.</li>
         <li>Developed a program to assess the functionality and capabilities of the circuit.</li>
