Update 'resume sections' and rearranged sections content in index.html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,6 +18,61 @@
     </p>
   </header>
 
+  <section id="education">
+    <h2>Education</h2>
+    <div class="education-item">
+        <h3><strong>University of Houston</strong></h3>
+        <p><em>Aug 2023 - Expected: May 2027 | Houston, TX  </em></p>
+        <li>Bachelor of Science in Computer Science, Minor in Bioinformatics in
+          Biotechnology and Biomedical Sciences</li>
+    </div>
+      
+    <div class="education-item">
+      <h3><strong>Dallas College</strong></h3>
+      <p><em>Jun 2023 - Aug 2023 | Dallas, TX  </em></p>
+      <li>Summer Transferable Courses</li>
+    </div>
+
+    <div class="education-item">
+      <h3><strong>Trinity Valley Community College</strong></h3>
+      <p><em>Aug 2021 - May 2023 | Athens, TX</em></p>
+      <li>Dual Enrollment, Transferable Courses</li>
+    </div>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project">
+       <h3>Cloud-Hosted Resume | AWS (S3, CloudFront, Lambda, API Gateway, DynamoDB), Terraform, GitHub Actions, Python, HTML/CSS </h3>
+       <ul>
+        <li>Deployed a static HTML/CSS resume site to S3 with custom domain and HTTPS via AWS Route 53 and AWS CloudFront</li>
+        <li>Created a serverless visitor counter using Lambda (Python), API Gateway, and DynamoDB</li>
+        <li>Implemented CI/CD pipelines with Terraform and GitHub Actions for infrastructure and deployment automation</li>
+      </ul>
+      <h3>Stem Craft 2.0 in C/C++</h3>
+      <ul>
+        <li>Worked in a team of 4 to build an LED electric circuit with switches, resistors, and a buzzer.</li>
+        <li>Developed a program to assess the functionality and capabilities of the circuit.</li>
+        <li>Participated in a timed, competition-style project emphasizing problem solving, planning, and teamwork.</li>
+        <li>Competition was hosted by NSBE and sponsored by Afrotech.</li>
+      </ul>
+    </div>
+  </section>
+
+  <section id="skills">
+    <h2>Technical Skills</h2>
+    <ul>
+      <li><strong>Languages:</strong> Python, C/C++, HTML/CSS, JavaScript, R</li>
+      <li>Developer Tools: VS Code, Visual Studio, PyCharm, R Studio</li>
+      <li>Cloud Computing: AWS- S3, Lambda, API Gateway, CloudFront, DynamoDB, IAM, Route53, ACM, EC2, CloudFormation</li>
+      <li>CI/CD: GitHub Actions</li>
+      <li>Containerization: Kubernetes</li>
+      <li>Infrastructure as Code: Terraform</li>
+      <li>Operating Systems: Linux</li>
+      <li>Microsoft Office: Excel, Outlook, Word, PowerPoint, Teams </li>
+    </ul>
+  </section>
+
   <section id="employment">
     <h2>Employment History</h2>
     <div class="job">
@@ -45,72 +100,18 @@
       </div>
   </section>
 
-  <section id="education">
-    <h2>Education</h2>
-    <div class="education-item">
-        <h3><strong>University of Houston</strong></h3>
-        <p><em>Aug 2023 - Expected: May 2027 | Houston, TX  </em></p>
-        <p>Bachelor of Science in Computer Science</p>
-    </div>
-      
-    <div class="education-item">
-      <h3><strong>Dallas College</strong></h3>
-      <p><em>Jun 2023 - Aug 2023 | Dallas, TX  </em></p>
-      <p>Summer Transferable Courses</p>
-    </div>
-
-    <div class="education-item">
-      <h3><strong>Trinity Valley Community College</strong></h3>
-      <p><em>Aug 2021 - May 2023 | Athens, TX</em></p>
-      <p>Dual Enrollment, Transferable Courses</p>
-    </div>
-  </section>
-
   <section id="involvement">
     <h2>Other Involvement</h2>
     <div class="education-item">
       <h3><strong>National Society of Black Engineers (NSBE)</strong> <em>– University of Houston</em></h3>
-      <p>Active member participating in volunteering events, workshops, and networking events, etc.</p>
+      <li>Active member participating in volunteering events, workshops, and networking events, etc.</li>
     </div>
 
     <div class="education-item">
       <h3><strong>Black Male Engineering Network (BMEN)</strong> <em>– University of Houston</em></h3>
-      <p>Active member engaged in community building, mentorship, and engineering initiatives.</p>
+      <li>Active member engaged in community building, mentorship, and engineering initiatives.</li>
     </div>
   
-  </section>
-
-  <section id="skills">
-    <h2>Technical Skills</h2>
-    <ul>
-      <li><strong>Languages:</strong> Python, C/C++, HTML/CSS, JavaScript, R</li>
-      <li><strong>Developer Tools:</strong> VS Code, Visual Studio, PyCharm, R Studio</li>
-      <li><strong>Cloud Computing:</strong> AWS- S3, Lambda, API Gateway, CloudFront, DynamoDB, IAM, Route53, ACM, EC2, CloudFormation</li>
-      <li><strong>CI/CD:</strong> GitHub Actions</li>
-      <li><strong>Containerization:</strong> Kubernetes</li>
-      <li><strong>Infrastructure as Code:</strong> Terraform</li>
-      <li><strong>Operating Systems:</strong> Linux</li>
-      <li><strong>Microsoft Office:</strong> Excel, Outlook, Word, PowerPoint, Teams </li>
-    </ul>
-  </section>
-
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-       <h3>Cloud-Hosted Resume | AWS (S3, CloudFront, Lambda, API Gateway, DynamoDB), Terraform, GitHub Actions, Python, HTML/CSS </h3>
-       <ul>
-        <li>Deployed a static HTML/CSS resume site to S3 with custom domain and HTTPS via AWS Route 53 and AWS CloudFront</li>
-        <li>Created a serverless visitor counter using Lambda (Python), API Gateway, and DynamoDB</li>
-        <li>Implemented CI/CD pipelines with Terraform and GitHub Actions for infrastructure and deployment automation</li>
-      </ul>
-      <h3>Stem Craft 2.0 | C/C++</h3>
-      <ul>
-        <li>Worked in a team of 4 to build an LED electric circuit with switches, resistors, and a buzzer.</li>
-        <li>Developed a program to assess the functionality and capabilities of the circuit.</li>
-        <li>Participated in a timed, competition-style project emphasizing problem solving, planning, and teamwork.</li>
-        <li>Competition was hosted by NSBE and sponsored by Afrotech.</li>
-      </ul>
-    </div>
   </section>
 
   <footer>
