Made Technical Skills subsections bold

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -69,7 +69,7 @@
       <li><strong>Containerization:</strong> Kubernetes</li>
       <li><strong>Infrastructure as Code:</strong> Terraform</li>
       <li><strong>Operating Systems:</strong> Linux</li>
-      <li><strong>Microsoft Office:</strong>> Excel, Outlook, Word, PowerPoint, Teams </li>
+      <li><strong>Microsoft Office:</strong> Excel, Outlook, Word, PowerPoint, Teams </li>
     </ul>
   </section>
 
