Updated email on site

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,7 +13,7 @@
     <p class="contact-info">
       Houston, TX, United States<br>
       Phone: (469) 420-8941<br>
-      Email: <a href="mailto:uche12341@gmail.com">uche12341@gmail.com</a><br>
+      Email: <a href="mailto:uchenna.t.okoronkwo@gmail.com">uchenna.t.okoronkwo@gmail.com</a><br>
       LinkedIn: <a href="https://www.linkedin.com/in/uchenna-okoronkwo-183b87281" target="_blank" class="linkedin-link">linkedin.com/in/uchenna-okoronkwo-183b87281</a>
     </p>
   </header>
