Added more details to Cloud-Resume Project section

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -45,9 +45,9 @@
     <div class="project">
        <h3>Cloud-Hosted Resume | AWS (S3, CloudFront, Lambda, API Gateway, DynamoDB), Terraform, GitHub Actions, Python, HTML/CSS </h3>
        <ul>
-        <li>Deployed a static HTML/CSS resume site to S3 with custom domain and HTTPS via AWS Route 53 and AWS CloudFront</li>
-        <li>Created a serverless visitor counter using Lambda (Python), API Gateway, and DynamoDB</li>
-        <li>Implemented CI/CD pipelines with Terraform and GitHub Actions for infrastructure and deployment automation</li>
+        <li>Developed and deployed a static resume website using HTML/CSS and hosted it on AWS S3 with a custom domain and HTTPS via AWS Route 53 and AWS CloudFront</li>
+        <li>Built a serverless API using AWS Lambda (Python), API Gateway, and DynamoDB to implement a real-time visitor counter</li>
+        <li>Automated infrastructure provisioning and site deployments using Terraform and GitHub Actions to demonstrate full CI/CD pipeline experience</li>
       </ul>
       <h3>Stem Craft 2.0 in C/C++</h3>
       <ul>
